Solved aside minimizing issue

--- a/export.html
+++ b/export.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -145,20 +145,22 @@
               </div>
             </div>
             <div class="get-result">
-              <a href="">الذهاب</a>
+              <a href="./reply.html">الذهاب</a>
             </div>
           </div>
         </div>
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./main.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -176,53 +178,55 @@
           <div class="export-section">
             <div class="export-btn">إصدار</div>
             <div class="export-card">
-              <div><a href="">إصدار مذكرة جديدة</a></div>
-              <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
+              <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
+              <div class="answer-note">
+                <a href="">الرد علي مذكرة</a>
+              </div>
             </div>
           </div>
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
-                <img src="assets/search.png" />
-                <a href="./search-admin-files.html"> بحث</a>
+                <img src="./assets/search.png" />
+                <a href="./search-transactions.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
-              <a href="">تسجيل الخروج</a>
+              <img src="./assets/Logout.png" />
+              <a href="./login.html">تسجيل الخروج</a>
             </div>
           </div>
         </aside>
@@ -231,23 +235,23 @@
           <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
                   class="notify"
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                 />
               </div>
@@ -262,11 +266,11 @@
             <div class="save">
               <div>
                 <a href="">حفظ في مسودة</a>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
               </div>
               <div>
                 <a href="./revision-and-send.html">الذهاب للمراجعة</a>
-                <img src="assets/send.png" />
+                <img src="./assets/send.png" />
               </div>
             </div>
           </div>
@@ -282,12 +286,11 @@
                 <div class="inputs-row">
                   <div class="input-cont">
                     <label for="type">نوع الوثيقة</label>
-                    <input
-                      type="text"
-                      name="type"
-                      id="type"
-                      placeholder="أدخل هنا"
-                    />
+                    <select name="district" type="text">
+                      <option value="اختر هنا" selected disabled>
+                        اختر هنا
+                      </option>
+                    </select>
                   </div>
                   <div class="input-cont">
                     <label for="department">الإدارة المعنية</label>
@@ -357,7 +360,7 @@
                       <option value="خاص">خاص</option>
                     </select>
                   </div>
-                  <div class="input-cont">
+                  <div class="input-cont show">
                     <label for="recieve">ادخل الرقم المدني للمستلم</label>
                     <input
                       type="text"
@@ -369,16 +372,16 @@
                 </div>
                 <!-- End Row Input -->
                 <!-- Row Input -->
-                <div class="inputs-row" style="width: 100%">
+                <div class="inputs-row show" style="width: 100%">
                   <div class="input-cont">
                     <p class="receive-title">المستلمين</p>
                     <div class="receivers">
                       <div class="single-receiver">
                         <div class="receiver-details">
-                          <img src="assets/person.png" alt="person" />
+                          <img src="./assets/person.png" alt="person" />
                           <p>احمد احمد</p>
                         </div>
-                        <img src="assets/close 2.png" alt="close" />
+                        <img src="./assets/close 2.png" alt="close" />
                       </div>
                     </div>
                   </div>
@@ -400,23 +403,23 @@
                 <div class="files">
                   <div class="file">
                     <div class="img-details">
-                      <img src="assets/exchange.png" alt="exchange" />
+                      <img src="./assets/exchange.png" alt="exchange" />
                       <div class="file-details">
                         <p class="filename">filename.pdf</p>
                         <p class="filesize">500kb</p>
                       </div>
                     </div>
-                    <img src="assets/close.png" alt="close" />
+                    <img src="./assets/close.png" alt="close" />
                   </div>
                   <div class="file">
                     <div class="img-details">
-                      <img src="assets/exchange.png" alt="exchange" />
+                      <img src="./assets/exchange.png" alt="exchange" />
                       <div class="file-details">
                         <p class="filename">filename.pdf</p>
                         <p class="filesize">500kb</p>
                       </div>
                     </div>
-                    <img src="assets/close.png" alt="close" />
+                    <img src="./assets/close.png" alt="close" />
                   </div>
                 </div>
               </div>
@@ -424,70 +427,70 @@
                 <div class="tools">
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/Folder.png" alt="Folder" />
+                      <img src="./assets/Folder.png" alt="Folder" />
                       <p>فتح</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/undo.png" alt="undo" />
+                      <img src="./assets/undo.png" alt="undo" />
                       <p>التراجع عن</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/redo.png" alt="redo" />
+                      <img src="./assets/redo.png" alt="redo" />
                       <p>إعادة</p>
                     </div>
                   </div>
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/Image.png" alt="Image" />
+                      <img src="./assets/Image.png" alt="Image" />
                       <p>الصورة</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/Table.png" alt="Table" />
+                      <img src="./assets/Table.png" alt="Table" />
                       <p>الجدول</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/link.png" alt="link" />
+                      <img src="./assets/link.png" alt="link" />
                       <p>الارتباط</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/Menu.png" alt="Menu" />
+                      <img src="./assets/Menu.png" alt="Menu" />
                       <p>الارتباط</p>
                     </div>
                   </div>
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/search.png" alt="Image" />
+                      <img src="./assets/search.png" alt="Image" />
                       <p>العثور</p>
                     </div>
                   </div>
                   <div class="tools-group">
                     <div class="tool">
-                      <img src="assets/Folder.png" alt="Folder" />
+                      <img src="./assets/Folder.png" alt="Folder" />
                       <p>التعليقات</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/File minus.png" alt="minus" />
+                      <img src="./assets/File minus.png" alt="minus" />
                       <p>تعقب التغييرات</p>
                     </div>
                     <div class="tool">
                       <img
-                        src="assets/clipboard-text-alt_svgrepo.com.png"
+                        src="./assets/clipboard-text-alt_svgrepo.com.png"
                         alt="clipboard"
                       />
                       <p>الحافظة المحلية</p>
                     </div>
                     <div class="tool">
-                      <img src="assets/expand.png" alt="expand" />
+                      <img src="./assets/expand.png" alt="expand" />
                       <p>توسيع</p>
                     </div>
                   </div>
                 </div>
                 <div class="file-preview">
                   <div class="create">
-                    <img src="assets/id.png" alt="id" />
+                    <img src="./assets/id.png" alt="id" />
                     <span>إنشاء من نموذج الإدارة</span>
                   </div>
-                  <img src="assets/مذكرة.png" alt="مذكره" class="note" />
+                  <img src="./assets/مذكرة.png" alt="مذكره" class="note" />
                 </div>
               </div>
             </div>
@@ -533,6 +536,11 @@
             document.querySelector(".notification").classList.toggle("active");
           }
         });
+      document.getElementById("recieve").addEventListener("change", () => {
+        document.querySelectorAll(".show").forEach((ele) => {
+          ele.style.visibility = "visible";
+        });
+      });
     </script>
   </body>
 </html>
