--- a/forwarding-book.html
+++ b/forwarding-book.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -145,20 +145,22 @@
               </div>
             </div>
             <div class="get-result">
-              <a href="">الذهاب</a>
+              <a href="./reply.html">الذهاب</a>
             </div>
           </div>
         </div>
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./main.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -176,53 +178,55 @@
           <div class="export-section">
             <div class="export-btn">إصدار</div>
             <div class="export-card">
-              <div><a href="">إصدار مذكرة جديدة</a></div>
-              <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
+              <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
+              <div class="answer-note">
+                <a href="">الرد علي مذكرة</a>
+              </div>
             </div>
           </div>
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li class="active">
-                <img src="assets/search.png" />
-                <a href="./search-admin-files.html"> بحث</a>
+                <img src="./assets/search.png" />
+                <a href="./search-transactions.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
-              <a href="">تسجيل الخروج</a>
+              <img src="./assets/Logout.png" />
+              <a href="./login.html">تسجيل الخروج</a>
             </div>
           </div>
         </aside>
@@ -231,23 +235,23 @@
           <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href="./support.html"
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
                   class="notify"
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                 />
               </div>
@@ -257,8 +261,8 @@
           <!-- Start choose ministry -->
           <div class="choose-ministry">
             <div class="choice">
-              <a href="./homepage.html"
-                ><img src="assets/arrow.png" alt="arrow"
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
               /></a>
               <p>تحويل كتاب</p>
             </div>
@@ -283,33 +287,33 @@
                   <div class="row">
                     <div class="single-receiver">
                       <div class="receiver-details">
-                        <img src="assets/person.png" alt="person" />
+                        <img src="./assets/person.png" alt="person" />
                         <p>احمد احمد</p>
                       </div>
-                      <img src="assets/close 2.png" alt="close" />
+                      <img src="./assets/close 2.png" alt="close" />
                     </div>
                     <div class="single-receiver">
                       <div class="receiver-details">
-                        <img src="assets/person.png" alt="person" />
+                        <img src="./assets/person.png" alt="person" />
                         <p>احمد احمد</p>
                       </div>
-                      <img src="assets/close 2.png" alt="close" />
+                      <img src="./assets/close 2.png" alt="close" />
                     </div>
                   </div>
                   <div class="row">
                     <div class="single-receiver">
                       <div class="receiver-details">
-                        <img src="assets/person.png" alt="person" />
+                        <img src="./assets/person.png" alt="person" />
                         <p>احمد احمد</p>
                       </div>
-                      <img src="assets/close 2.png" alt="close" />
+                      <img src="./assets/close 2.png" alt="close" />
                     </div>
                     <div class="single-receiver">
                       <div class="receiver-details">
-                        <img src="assets/person.png" alt="person" />
+                        <img src="./assets/person.png" alt="person" />
                         <p>احمد احمد</p>
                       </div>
-                      <img src="assets/close 2.png" alt="close" />
+                      <img src="./assets/close 2.png" alt="close" />
                     </div>
                   </div>
                 </div>
@@ -317,17 +321,17 @@
               <div class="arbitary">
                 <div class="main-section section">
                   <div class="section-details">
-                    <img src="assets/section.png" />
+                    <img src="./assets/section.png" />
                     <p>اسم القسم</p>
                   </div>
                   <div class="secondary-section section">
                     <div class="section-details">
-                      <img src="assets/secondary-section.png" />
+                      <img src="./assets/secondary-section.png" />
                       <p>قسم فرعي</p>
                     </div>
                     <div class="secondary-section section">
                       <div class="section-details">
-                        <img src="assets/secondary-section.png" />
+                        <img src="./assets/secondary-section.png" />
                         <p>قسم فرعي</p>
                       </div>
                     </div>
