--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -145,20 +145,22 @@
               </div>
             </div>
             <div class="get-result">
-              <a href="">الذهاب</a>
+              <a href="./reply.html">الذهاب</a>
             </div>
           </div>
         </div>
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./main.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -177,52 +179,54 @@
             <div class="export-btn">إصدار</div>
             <div class="export-card">
               <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
-              <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
+              <div class="answer-note">
+                <a href="">الرد علي مذكرة</a>
+              </div>
             </div>
           </div>
           <div class="tabs">
             <ul>
               <li class="active">
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
-                <img src="assets/search.png" />
-                <a href="./search-admin-files.html"> بحث</a>
+                <img src="./assets/search.png" />
+                <a href="./search-transactions.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
-              <a href="">تسجيل الخروج</a>
+              <img src="./assets/Logout.png" />
+              <a href="./login.html">تسجيل الخروج</a>
             </div>
           </div>
         </aside>
@@ -231,22 +235,22 @@
           <div class="nav">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                   class="notify"
                 />
@@ -259,35 +263,35 @@
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox1.png" alt="inbox" />
+                <img src="./assets/inbox1.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox1.png" alt="inbox" />
+                <img src="./assets/inbox1.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox2.png" alt="inbox" />
+                <img src="./assets/inbox2.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox1.png" alt="inbox" />
+                <img src="./assets/inbox1.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
             <div class="inbox-card">
               <p class="card-title">عدد الكتب الوارده</p>
               <div class="card-count">
-                <img src="assets/inbox3.png" alt="inbox" />
+                <img src="./assets/inbox3.png" alt="inbox" />
                 <p>354</p>
               </div>
             </div>
@@ -302,7 +306,7 @@
               </select>
             </div>
             <a href="">
-              <img src="assets/filter.png" alt="filter" />
+              <img src="./assets/filter.png" alt="filter" />
             </a>
           </div>
           <!-- End choose ministry -->
@@ -313,7 +317,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart"></canvas>
@@ -324,7 +328,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart2"></canvas>
@@ -337,7 +341,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart4"></canvas>
@@ -348,7 +352,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart3"></canvas>
@@ -361,7 +365,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart5"></canvas>
@@ -372,7 +376,7 @@
                 <div class="single-statistic">
                   <div class="statistic-title">
                     <p>معاملات الواردة حسب الإدارة</p>
-                    <img src="assets/tooltip.png" alt="tooltip" />
+                    <img src="./assets/tooltip.png" alt="tooltip" />
                   </div>
                   <div class="chart">
                     <canvas id="myChart6"></canvas>
@@ -387,11 +391,11 @@
             <div class="activity">
               <div class="statistic-title">
                 <p>اخر النشاطات</p>
-                <img src="assets/tooltip.png" alt="tooltip" />
+                <img src="./assets/tooltip.png" alt="tooltip" />
               </div>
               <div class="activity-list">
                 <div class="single-activity">
-                  <img src="assets/Avatar.png" alt="user" />
+                  <img src="./assets/Avatar.png" alt="user" />
                   <div class="activity-details">
                     <p class="activity-title">
                       تم استقبال وارد من قبل
@@ -401,7 +405,7 @@
                   </div>
                 </div>
                 <div class="single-activity">
-                  <img src="assets/Avatar.png" alt="user" />
+                  <img src="./assets/Avatar.png" alt="user" />
                   <div class="activity-details">
                     <p class="activity-title">
                       تم استقبال وارد من قبل
@@ -411,7 +415,7 @@
                   </div>
                 </div>
                 <div class="single-activity">
-                  <img src="assets/Avatar.png" alt="user" />
+                  <img src="./assets/Avatar.png" alt="user" />
                   <div class="activity-details">
                     <p class="activity-title">
                       تم استقبال وارد من قبل
@@ -449,17 +453,17 @@
 
           datasets: [
             {
-              labels: "ss",
+              label: "إدارة 1",
               data: [100, 150, 220, 90, 420, 330, 280],
               borderWidth: 1,
               borderRadius: 16,
               backgroundColor: [
-                "rgba(255, 99, 132, 0.7)", // Red
-                "rgba(54, 162, 235, 0.7)", // Blue
-                "rgba(0, 0, 0, 0.7 )", // Yellow
-                "rgba(75, 192, 192, 0.7)", // Green
-                "rgba(153, 102, 255, 0.7)", // Purple
-                "rgba(255, 159, 64, 0.7)", // Orange
+                "rgba(189, 172, 121, 1)",
+                "rgba(180, 180, 126, 1)",
+                "rgba(176, 122, 124, 1)",
+                "rgba(165, 150, 129, 1)",
+                "rgba(134, 138, 142, 1)",
+                "rgba(196, 161, 116, 1)",
               ],
             },
           ],
@@ -490,8 +494,8 @@
               borderWidth: 1,
               borderRadius: 16,
               backgroundColor: [
-                "rgba(255, 99, 132, 0.7)", // Red
-                "rgba(255, 159, 64, 0.7)", // Orange
+                "rgba(196, 161, 116, 1)", // Red
+                "rgba(176, 122, 124, 1)", // Orange
               ],
             },
           ],
@@ -533,16 +537,17 @@
 
           datasets: [
             {
+              label: "إدارة 1",
               data: [100, 150, 220, 90, 420, 330, 280],
               borderWidth: 1,
               borderRadius: 16,
               backgroundColor: [
-                "rgba(255, 99, 132, 0.7)", // Red
-                "rgba(54, 162, 235, 0.7)", // Blue
-                "rgba(255, 206, 86, 0.7)", // Yellow
-                "rgba(75, 192, 192, 0.7)", // Green
-                "rgba(153, 102, 255, 0.7)", // Purple
-                "rgba(255, 159, 64, 0.7)", // Orange
+                "rgba(189, 172, 121, 1)",
+                "rgba(180, 180, 126, 1)",
+                "rgba(176, 122, 124, 1)",
+                "rgba(165, 150, 129, 1)",
+                "rgba(134, 138, 142, 1)",
+                "rgba(196, 161, 116, 1)",
               ],
             },
           ],
@@ -565,16 +570,17 @@
       let myChart4 = new Chart(ctx4, {
         type: "pie",
         data: {
-          labels: ["إدارة 1", "إدارة 1"],
+          label: ["إدارة 1", "إدارة 1"],
 
           datasets: [
             {
+              label: "إدارة 1",
               data: [100, 150],
               borderWidth: 1,
               borderRadius: 16,
               backgroundColor: [
-                "rgba(255, 99, 132, 0.7)", // Red
-                "rgba(255, 159, 64, 0.7)", // Orange
+                "rgba(189, 172, 121, 1)",
+                "rgba(165, 75, 110, 1)",
               ],
             },
           ],
@@ -588,9 +594,9 @@
             label: "My First Dataset",
             data: [300, 50, 100],
             backgroundColor: [
-              "rgb(255, 99, 132)",
-              "rgb(54, 162, 235)",
-              "rgb(255, 205, 86)",
+              "rgba(189, 172, 121, 1)",
+              "rgba(180, 180, 126, 1)",
+              "rgba(176, 122, 124, 1)",
             ],
             hoverOffset: 4,
           },
@@ -628,10 +634,12 @@
 
       // Rainbow colors (ROYGBIV)
       const rainbowColors = [
-        "rgba(0, 255, 0, 0.7)", // Green
-        "rgba(0, 0, 255, 0.7)", // Blue
-        "rgba(75, 0, 130, 0.7)", // Indigo
-        "rgba(148, 0, 211, 0.7)", // Violet
+        "rgba(189, 172, 121, 1)",
+        "rgba(180, 180, 126, 1)",
+        "rgba(176, 122, 124, 1)",
+        "rgba(165, 150, 129, 1)",
+        "rgba(134, 138, 142, 1)",
+        "rgba(196, 161, 116, 1)",
       ];
 
       // Equal values to create equal-width bands
@@ -680,28 +688,28 @@
             {
               label: "Product B",
               data: data.B,
-              backgroundColor: "rgba(54, 162, 235, 0.7)",
+              backgroundColor: "rgba(189, 172, 121, 1)",
               borderColor: "rgba(54, 162, 235, 1)",
               borderWidth: 1,
             },
             {
               label: "Product C",
               data: data.C,
-              backgroundColor: "rgba(255, 206, 86, 0.7)",
+              backgroundColor: "rgba(180, 180, 126, 1)",
               borderColor: "rgba(255, 206, 86, 1)",
               borderWidth: 1,
             },
             {
               label: "Product D",
               data: data.D,
-              backgroundColor: "rgba(75, 192, 192, 0.7)",
+              backgroundColor: "rgba(134, 138, 142, 1)",
               borderColor: "rgba(75, 192, 192, 1)",
               borderWidth: 1,
             },
             {
               label: "Product E",
               data: data.E,
-              backgroundColor: "rgba(153, 102, 255, 0.7)",
+              backgroundColor: "rgba(176, 122, 124, 1)",
               borderColor: "rgba(153, 102, 255, 1)",
               borderWidth: 1,
             },
