--- a/support.html
+++ b/support.html
@@ -12,25 +12,25 @@
       <div class="container">
         <div class="header-stats">
           <div class="back-arrow">
-            <a href="./index.html"
-              ><img src="assets/arrow.png" alt="arrow"
+            <a href="./login.html"
+              ><img src="./assets/arrow.png" alt="arrow"
             /></a>
           </div>
           <!-- Logo -->
           <div class="logo-cont">
-            <a href="./">
-              <img src="assets/Group 2.png" alt="logo" />
-              <img src="assets/Group 3.png" alt="name" />
+            <a href="./login.html">
+              <img src="./assets/Group 2.png" alt="logo" />
+              <img src="./assets/Group 3.png" alt="name" />
             </a>
           </div>
           <!-- End Logo -->
           <div class="time-wrapper">
             <div class="time">
-              <img src="assets/clock.png" alt="clock" />
+              <img src="./assets/clock.png" alt="clock" />
               <span>12:46:43 PM</span>
             </div>
             <div class="date">
-              <img src="assets/calendar.png" alt="calendar" />
+              <img src="./assets/calendar.png" alt="calendar" />
               <span>01-01-2025</span>
             </div>
           </div>
@@ -41,7 +41,7 @@
     <!-- Start Main -->
     <main>
       <div class="main-background">
-        <form class="support-card" action="./index.html">
+        <form class="support-card" action="./login.html">
           <h1>طلب الدعم الفني</h1>
           <!-- Row Input -->
           <div class="inputs-row">
@@ -51,7 +51,7 @@
                 type="number"
                 name="national"
                 id="national"
-                placeholder="أدخل هنا"
+                placeholder="اكتب هنا"
               />
             </div>
             <div class="input-cont">
@@ -60,7 +60,7 @@
                 type="text"
                 name="email"
                 id="email"
-                placeholder="أدخل هنا"
+                placeholder="اكتب هنا"
               />
             </div>
           </div>
@@ -69,7 +69,7 @@
           <div class="inputs-row">
             <div class="input-cont">
               <label for="name">الاسم</label>
-              <input type="text" name="name" id="name" placeholder="أدخل هنا" />
+              <input type="text" name="name" id="name" placeholder="اكتب هنا" />
             </div>
             <div class="input-cont">
               <label for="phone">رقم الهاتف</label>
@@ -77,7 +77,7 @@
                 type="number"
                 name="phone"
                 id="phone"
-                placeholder="أدخل هنا"
+                placeholder="اكتب هنا"
               />
             </div>
           </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="input-cont">
               <label for="system">النظام</label>
-              <select name="system" id="system" placeholder="أدخل هنا">
+              <select name="system" id="system" placeholder="اكتب هنا">
                 <option value="أنظمة التراسل" selected disabled>
                   أنظمة التراسل
                 </option>
@@ -110,12 +110,12 @@
                 type="text"
                 name="description"
                 id="description"
-                placeholder="أدخل هنا"
+                placeholder="اكتب هنا"
               />
             </div>
           </div>
           <!-- End Row Input -->
-          <button>تسجيل الدخول</button>
+          <button>ارسل</button>
         </form>
       </div>
     </main>
@@ -124,8 +124,8 @@
       <div class="container">
         <div class="logo-cont">
           <a href="">
-            <img src="assets/Group 2.png" alt="logo" />
-            <img src="assets/Group 3.png" alt="name" />
+            <img src="./assets/Group 2.png" alt="logo" />
+            <img src="./assets/Group 3.png" alt="name" />
           </a>
         </div>
         <div class="footer-items">
@@ -135,21 +135,23 @@
         <div class="footer-items">
           <p class="title">إبق علي تواصل</p>
           <div class="social-media">
-            <a href="/"><img src="assets/x.png" alt="x" /></a>
-            <a href="/"><img src="assets/youtube.png" alt="youtube" /></a>
-            <a href="/"><img src="assets/instagram.png" alt="instagram" /></a>
-            <a href="/"><img src="assets/snapchat.png" alt="snapchat" /></a>
-            <a href="/"><img src="assets/tiktok.png" alt="tiktok" /></a>
+            <a href="./"><img src="./assets/x.png" alt="x" /></a>
+            <a href="./"><img src="./assets/youtube.png" alt="youtube" /></a>
+            <a href="./"
+              ><img src="./assets/instagram.png" alt="instagram"
+            /></a>
+            <a href="./"><img src="./assets/snapchat.png" alt="snapchat" /></a>
+            <a href="./"><img src="./assets/tiktok.png" alt="tiktok" /></a>
           </div>
         </div>
         <div class="footer-items">
           <p class="title">تطبيق ديوان الخدمة المدنية الرسمي</p>
           <div class="mobile-app">
             <a href="">
-              <img src="assets/appstore.png" alt="appstore" />
+              <img src="./assets/appstore.png" alt="appstore" />
             </a>
             <a href="">
-              <img src="assets/googleplay.png" alt="googleplay" />
+              <img src="./assets/googleplay.png" alt="googleplay" />
             </a>
           </div>
         </div>
