--- a/search-bonus-history.html
+++ b/search-bonus-history.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -145,20 +145,22 @@
               </div>
             </div>
             <div class="get-result">
-              <a href="">الذهاب</a>
+              <a href="./reply.html">الذهاب</a>
             </div>
           </div>
         </div>
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./main.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -176,53 +178,55 @@
           <div class="export-section">
             <div class="export-btn">إصدار</div>
             <div class="export-card">
-              <div><a href="">إصدار مذكرة جديدة</a></div>
-              <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
+              <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
+              <div class="answer-note">
+                <a href="">الرد علي مذكرة</a>
+              </div>
             </div>
           </div>
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li class="active">
-                <img src="assets/search.png" />
-                <a href="./search-admin-files.html"> بحث</a>
+                <img src="./assets/search.png" />
+                <a href="./search-transactions.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
-              <a href="">تسجيل الخروج</a>
+              <img src="./assets/Logout.png" />
+              <a href="./login.html">تسجيل الخروج</a>
             </div>
           </div>
         </aside>
@@ -231,23 +235,23 @@
           <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
                   class="notify"
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                 />
               </div>
@@ -265,19 +269,19 @@
             <form action="" class="search-transaction">
               <div class="four-input-row full">
                 <div class="input-quarter">
-                  <label for="number">اسم الجهة</label>
+                  <label for="number">الرقم المدني</label>
                   <input type="number" placeholder="اكتب هنا" />
                 </div>
                 <div class="input-quarter">
-                  <label for="id">سنة التشريع</label>
+                  <label for="id">الاسم</label>
                   <input name="id" type="number" placeholder="اكتب هنا" />
                 </div>
                 <div class="input-quarter">
-                  <label for="word">بحث بالكلمة</label>
+                  <label for="word">رقم الهوية الموحد</label>
                   <input name="word" type="text" placeholder="اكتب هنا" />
                 </div>
                 <div class="input-quarter">
-                  <label for="word">بحث بالكلمة</label>
+                  <label for="word">اسم الجهة</label>
                   <input name="word" type="text" placeholder="اكتب هنا" />
                 </div>
               </div>
@@ -290,11 +294,11 @@
                   </select>
                 </div>
                 <div class="input-quarter">
-                  <label for="word">بحث بالكلمة</label>
+                  <label for="word">رقم السجل</label>
                   <input name="word" type="text" placeholder="اكتب هنا" />
                 </div>
                 <div class="input-quarter">
-                  <label for="word">بحث بالكلمة</label>
+                  <label for="word">رقم الصفحه</label>
                   <input name="word" type="text" placeholder="اكتب هنا" />
                 </div>
               </div>
@@ -309,13 +313,13 @@
           <div class="actions">
             <div class="docs">
               <div class="img-action">
-                <img src="assets/print.png" alt="print" class="print" />
+                <img src="./assets/print.png" alt="print" class="print" />
               </div>
               <div class="img-action">
-                <img src="assets/export.png" alt="export" class="export" />
+                <img src="./assets/export.png" alt="export" class="export" />
               </div>
               <div class="img-action">
-                <img src="assets/filter.png" alt="filter" class="filter" />
+                <img src="./assets/filter.png" alt="filter" class="filter" />
               </div>
             </div>
             <form class="search">
@@ -326,78 +330,17 @@
           <!-- Start data -->
           <div class="draft-data">
             <div class="data-header">
-              <p class="col-head">الموضوع</p>
-              <p class="col-head">اسم الجهة</p>
-              <p class="col-head">تاريخ التصوير</p>
-              <p class="col-head">رقم المعاملة</p>
-              <p class="col-head">رقم المرجع</p>
-              <p class="col-head">الاسم / الرقم المدني</p>
-              <p class="col-head">تاريخ التسليم</p>
-              <p class="col-head">الملاحظات</p>
-            </div>
-            <div class="data-row">
-              <p class="col-head">1</p>
-              <p class="col-head">اسم الجهة</p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">123</p>
-              <p class="col-head">1</p>
-              <p class="col-head"></p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">تخفيف ساعات</p>
-            </div>
-            <div class="data-row">
-              <p class="col-head">1</p>
-              <p class="col-head">اسم الجهة</p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">123</p>
-              <p class="col-head">1</p>
-              <p class="col-head"></p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">تخفيف ساعات</p>
-            </div>
-            <div class="data-row">
-              <p class="col-head">1</p>
-              <p class="col-head">اسم الجهة</p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">123</p>
-              <p class="col-head">1</p>
-              <p class="col-head"></p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">تخفيف ساعات</p>
-            </div>
-            <div class="data-row">
-              <p class="col-head">1</p>
-              <p class="col-head">اسم الجهة</p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">123</p>
-              <p class="col-head">1</p>
-              <p class="col-head"></p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">تخفيف ساعات</p>
-            </div>
-            <div class="data-row">
-              <p class="col-head">1</p>
-              <p class="col-head">اسم الجهة</p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">123</p>
-              <p class="col-head">1</p>
-              <p class="col-head"></p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">تخفيف ساعات</p>
-            </div>
-            <div class="data-row">
-              <p class="col-head">1</p>
-              <p class="col-head">اسم الجهة</p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">123</p>
-              <p class="col-head">1</p>
-              <p class="col-head"></p>
-              <p class="col-head">15/02/2025</p>
-              <p class="col-head">تخفيف ساعات</p>
+              <p class="col-head">م</p>
+              <p class="col-head">عرض</p>
+              <p class="col-head">الاسم</p>
+              <p class="col-head">الجهة</p>
+              <p class="col-head">رقم الاستماره</p>
+              <p class="col-head">رقم السجل</p>
+              <p class="col-head">تصنيف الكتاب</p>
             </div>
 
             <!-- Start Pagination -->
-            <div class="pagination">
+            <!-- <div class="pagination">
               <div class="lines">
                 <select name="lines" id="line">
                   <option value="15">5</option>
@@ -407,7 +350,7 @@
                 <label for="lines">الاسطر بالصفحه</label>
               </div>
               <div class="pages">
-                <div><img src="assets/arrow-right.png" alt="left" /></div>
+                <div><img src="./assets/arrow-right.png" alt="left" /></div>
                 <div class="page-numbers">
                   <a>4</a>
                   <a>3</a>
@@ -415,12 +358,12 @@
                   <a>2</a>
                   <a class="active">1</a>
                 </div>
-                <div><img src="assets/arrow-left.png" alt="left" /></div>
+                <div><img src="./assets/arrow-left.png" alt="left" /></div>
               </div>
               <div class="total">
                 <p>المجموع 57</p>
               </div>
-            </div>
+            </div> -->
 
             <!-- End Pagination -->
           </div>
