--- a/search-decisions-administrations.html
+++ b/search-decisions-administrations.html
@@ -22,7 +22,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,7 +36,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -45,7 +45,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +59,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +69,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +83,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -145,20 +145,22 @@
               </div>
             </div>
             <div class="get-result">
-              <a href="">الذهاب</a>
+              <a href="./reply.html">الذهاب</a>
             </div>
           </div>
         </div>
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./homepage.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +169,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -176,53 +178,55 @@
           <div class="export-section">
             <div class="export-btn">إصدار</div>
             <div class="export-card">
-              <div><a href="">إصدار مذكرة جديدة</a></div>
-              <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
+              <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
+              <div class="answer-note">
+                <a href="">الرد علي مذكرة</a>
+              </div>
             </div>
           </div>
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li class="active">
-                <img src="assets/search.png" />
-                <a href="./search-admin-files.html"> بحث</a>
+                <img src="./assets/search.png" />
+                <a href="./search-transactions.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
-              <a href="">تسجيل الخروج</a>
+              <img src="./assets/Logout.png" />
+              <a href="./login.html">تسجيل الخروج</a>
             </div>
           </div>
         </aside>
@@ -231,23 +235,23 @@
           <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
                   class="notify"
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                 />
               </div>
@@ -289,11 +293,11 @@
 
               <div class="four-input-row">
                 <div class="input-quarter">
-                  <label for="number">تاريخ المعاملة من</label>
+                  <label for="number">تاريخ الكتاب من</label>
                   <input name="from" type="date" placeholder="اكتب هنا" />
                 </div>
                 <div class="input-quarter">
-                  <label for="id">تاريخ المعاملة الى</label>
+                  <label for="id">تاريخ الكتاب الى</label>
                   <input name="to" type="date" placeholder="اكتب هنا" />
                 </div>
               </div>
@@ -309,78 +313,33 @@
             <div class="data-header">
               <p class="col-index">#</p>
               <p class="col-head">الاجراءات</p>
-              <p class="col-head">الاجراءات</p>
-              <p class="col-head">الاجراءات</p>
-              <p class="col-head">الاجراءات</p>
-              <p class="col-head">الاجراءات</p>
-              <p class="col-head">الاجراءات</p>
-              <p class="col-head">الاجراءات</p>
-              <p class="col-head">الاجراءات</p>
-              <p class="col-head">الحالة</p>
+              <p class="col-head">رقم التشريع</p>
+              <p class="col-head">سنة التشريع</p>
+              <p class="col-head">تاريخ الكتاب</p>
+              <p class="col-head">نوع التشريع</p>
+              <p class="col-head">الموضوع</p>
+              <p class="col-head">اسم التشريع</p>
             </div>
             <div class="data-row">
               <p class="col-index">1</p>
               <div class="col-head">
-                <div><img src="assets/read.png" alt="read" /></div>
-                <div><img src="assets/back.png" alt="read" /></div>
-                <div><img src="assets/book.png" alt="read" /></div>
-                <div><img src="assets/done.png" alt="read" /></div>
+                <div><img src="./assets/read.png" alt="read" /></div>
+                <div><img src="./assets/back.png" alt="read" /></div>
               </div>
               <p class="col-head">موضوع الاستثناءات</p>
               <p class="col-head">05/12/2024</p>
-              <p class="col-head">الاجراءات</p>
               <p class="col-head">مذكرات داخلية</p>
               <p class="col-head">20251205</p>
               <p class="col-head">ادارة التشغيل / احمد احمد</p>
               <p class="col-head">3</p>
-              <div class="item status">
-                <div class="status-tooltip">
-                  <div class="status-title">
-                    <p>الحالة</p>
-                    <p class="status-value">تم الاستلام</p>
-                  </div>
-                  <div class="status-title">
-                    <p>اسم المرسل</p>
-                    <p class="status-value">إدارة التشغيل / احمد احمد</p>
-                  </div>
-                  <div class="status-title">
-                    <p>المحول اليه</p>
-                    <p class="status-value">إدارة التشغيل / احمد احمد</p>
-                  </div>
-                </div>
-                <p
-                  style="
-                    display: flex;
-                    font-size: 16px;
-                    text-wrap-mode: nowrap;
-                    align-items: center;
-                    gap: 20px;
-                  "
-                >
-                  تم التسليم
-                  <img src="assets/blue.png" class="blue" />
-                </p>
-              </div>
-              <div
-                class="col-head"
-                style="margin-right: 20px; display: flex; align-items: center"
-              >
-                <img
-                  src="assets/arrow-down.png"
-                  alt="arrow"
-                  class="expand"
-                  width="10px"
-                  height="10px"
-                />
-              </div>
             </div>
             <div class="details-data">
               <div class="details-tabs">
-                <a href="/" class="active">تدفق العمل 1</a>
-                <a href="/"
-                  >تدفق العمل 2 <img src="assets/Ellipse 2323.png" alt="red"
+                <a href="" class="active">تدفق العمل 1</a>
+                <a href=""
+                  >تدفق العمل 2 <img src="./assets/Ellipse 2323.png" alt="red"
                 /></a>
-                <a href="/">تدفق العمل 3 </a>
+                <a href="">تدفق العمل 3 </a>
               </div>
               <div class="details">
                 <div class="details-header">
@@ -392,7 +351,7 @@
                 <div class="details">
                   <div class="single-detail">
                     <div>
-                      <img src="assets/exchange2.png" alt="exchange2" />
+                      <img src="./assets/exchange2.png" alt="exchange2" />
                     </div>
                     <div class="detail-col">
                       <p class="title">إجراءات الدراسة</p>
@@ -428,7 +387,7 @@
 
                   <div class="single-detail">
                     <div>
-                      <img src="assets/exchange2.png" alt="exchange2" />
+                      <img src="./assets/exchange2.png" alt="exchange2" />
                     </div>
                     <div class="detail-col">
                       <p class="title">إجراءات الدراسة</p>
@@ -476,7 +435,7 @@
                 <label for="lines">الاسطر بالصفحه</label>
               </div>
               <div class="pages">
-                <div><img src="assets/arrow-right.png" alt="left" /></div>
+                <div><img src="./assets/arrow-right.png" alt="left" /></div>
                 <div class="page-numbers">
                   <a>4</a>
                   <a>3</a>
@@ -484,7 +443,7 @@
                   <a>2</a>
                   <a class="active">1</a>
                 </div>
-                <div><img src="assets/arrow-left.png" alt="left" /></div>
+                <div><img src="./assets/arrow-left.png" alt="left" /></div>
               </div>
               <div class="total">
                 <p>المجموع 57</p>
