--- a/search-results.html
+++ b/search-results.html
@@ -12,7 +12,7 @@
         <div class="iframe-modal">
           <iframe
             src="https://research.google.com/pubs/archive/44678.pdf"
-            width="100%"
+            width="1200px"
             height="900px"
           >
           </iframe>
@@ -30,7 +30,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -44,7 +44,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
@@ -53,7 +53,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -67,7 +67,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -77,7 +77,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -91,7 +91,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -153,20 +153,22 @@
               </div>
             </div>
             <div class="get-result">
-              <a href="">الذهاب</a>
+              <a href="./reply.html">الذهاب</a>
             </div>
           </div>
         </div>
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./main.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -175,7 +177,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -184,53 +186,55 @@
           <div class="export-section">
             <div class="export-btn">إصدار</div>
             <div class="export-card">
-              <div><a href="">إصدار مذكرة جديدة</a></div>
-              <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
+              <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
+              <div class="answer-note">
+                <a href="">الرد علي مذكرة</a>
+              </div>
             </div>
           </div>
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li>
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li class="active">
-                <img src="assets/search.png" />
-                <a href="./search-admin-files.html"> بحث</a>
+                <img src="./assets/search.png" />
+                <a href="./search-transactions.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
-              <a href="">تسجيل الخروج</a>
+              <img src="./assets/Logout.png" />
+              <a href="./login.html">تسجيل الخروج</a>
             </div>
           </div>
         </aside>
@@ -239,23 +243,23 @@
           <div class="nav" style="border-bottom: 1px solid #eee">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
                   class="notify"
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                 />
               </div>
@@ -266,7 +270,7 @@
           <div class="choose-ministry">
             <div class="choice">
               <a href="./homepage.html"
-                ><img src="assets/arrow.png" alt="arrow"
+                ><img src="./assets/arrow.png" alt="arrow"
               /></a>
               <p>نتائج البحث</p>
             </div>
@@ -280,13 +284,21 @@
               <div class="actions">
                 <div class="docs">
                   <div class="img-action">
-                    <img src="assets/print.png" alt="print" class="print" />
+                    <img src="./assets/print.png" alt="print" class="print" />
                   </div>
                   <div class="img-action">
-                    <img src="assets/export.png" alt="export" class="export" />
+                    <img
+                      src="./assets/export.png"
+                      alt="export"
+                      class="export"
+                    />
                   </div>
                   <div class="img-action">
-                    <img src="assets/filter.png" alt="filter" class="filter" />
+                    <img
+                      src="./assets/filter.png"
+                      alt="filter"
+                      class="filter"
+                    />
                   </div>
                 </div>
                 <form class="search">
@@ -348,7 +360,7 @@
                   <label for="lines">الاسطر بالصفحه</label>
                 </div>
                 <div class="pages">
-                  <div><img src="assets/arrow-right.png" alt="left" /></div>
+                  <div><img src="./assets/arrow-right.png" alt="left" /></div>
                   <div class="page-numbers">
                     <a>4</a>
                     <a>3</a>
@@ -356,7 +368,7 @@
                     <a>2</a>
                     <a class="active">1</a>
                   </div>
-                  <div><img src="assets/arrow-left.png" alt="left" /></div>
+                  <div><img src="./assets/arrow-left.png" alt="left" /></div>
                 </div>
                 <div class="total">
                   <p>المجموع 57</p>
@@ -420,17 +432,17 @@
             document.querySelector(".notification").classList.toggle("active");
           }
         });
-      let iframe = document.querySelector(".file-preview");
-      console.log(iframe);
-      iframe.addEventListener("click", (e) => {
-        document.querySelector(".iframe-modal").classList.toggle("active");
-      });
-      document.querySelector(".iframe-modal").addEventListener("click", (e) => {
-        if (e.target == document.querySelector(".iframe-modal")) {
-          document.body.style.overflow = "scroll";
-          document.querySelector(".iframe-modal").classList.toggle("active");
-        }
-      });
+      // let iframe = document.querySelectorAll("html");
+
+      // iframe.addEventListener("click", (e) => {
+      //   document.querySelector(".iframe-modal").classList.toggle("active");
+      // });
+      // document.querySelector(".iframe-modal").addEventListener("click", (e) => {
+      //   if (e.target == document.querySelector(".iframe-modal")) {
+      //     document.body.style.overflow = "scroll";
+      //     document.querySelector(".iframe-modal").classList.toggle("active");
+      //   }
+      // });
     </script>
   </body>
 </html>
