--- a/sent.html
+++ b/sent.html
@@ -19,10 +19,14 @@
               <p class="type-unread">الغير مقروء</p>
             </div>
             <div class="all-notifications">
-              <div class="single-notification">
+              <a
+                class="single-notification"
+                href="./revision.html"
+                style="text-decoration: none; color: #333"
+              >
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -36,16 +40,16 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                   />
                 </div>
-              </div>
+              </a>
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -59,7 +63,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -69,7 +73,7 @@
               <div class="single-notification">
                 <div class="notification-content">
                   <img
-                    src="assets/bell.png"
+                    src="./assets/bell.png"
                     alt="bell"
                     width="46px"
                     height="46px"
@@ -83,7 +87,7 @@
                 </div>
                 <div class="new">
                   <img
-                    src="assets/Ellipse 1726.png"
+                    src="./assets/Ellipse 1726.png"
                     width="15px"
                     height="15px"
                     hidden
@@ -145,20 +149,22 @@
               </div>
             </div>
             <div class="get-result">
-              <a href="">الذهاب</a>
+              <a href="./reply.html">الذهاب</a>
             </div>
           </div>
         </div>
         <aside>
           <div class="top-options">
             <div class="back-arrow">
-              <a href="./"><img src="assets/arrow.png" alt="arrow" /></a>
+              <a href="./main.html"
+                ><img src="./assets/arrow.png" alt="arrow"
+              /></a>
             </div>
             <div class="logo-cont">
-              <a href="">
-                <img src="assets/Group 2.png" alt="logo" />
+              <a href="./main.html">
+                <img src="./assets/Group 2.png" alt="logo" />
                 <img
-                  src="assets/Group 3.png"
+                  src="./assets/Group 3.png"
                   alt="name"
                   class="name"
                   style="max-width: 60%"
@@ -167,7 +173,7 @@
             </div>
           </div>
           <div class="user-info">
-            <img src="assets/Avatar.png" alt="Avatar" />
+            <img src="./assets/Avatar.png" alt="Avatar" />
             <div class="user-name">
               <p>أحمد أحمد</p>
               <p>المدير العام</p>
@@ -177,52 +183,54 @@
             <div class="export-btn">إصدار</div>
             <div class="export-card">
               <div><a href="./export.html">إصدار مذكرة جديدة</a></div>
-              <div class="answer-note"><a href="">الرد علي مذكرة</a></div>
+              <div class="answer-note">
+                <a href="">الرد علي مذكرة</a>
+              </div>
             </div>
           </div>
           <div class="tabs">
             <ul>
               <li>
-                <img src="assets/home.png" />
+                <img src="./assets/home.png" />
                 <a href="./homepage.html"> الرئيسية</a>
               </li>
               <li>
-                <img src="assets/directbox-receive.png" />
+                <img src="./assets/directbox-receive.png" />
                 <a href="./inbox.html">البريد الوارد</a>
               </li>
               <li class="active">
-                <img src="assets/directbox-send.png" />
+                <img src="./assets/directbox-send.png" />
                 <a href="./sent.html">البريد الصادر</a>
                 <span>1</span>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./new-missions.html">المهام الجديدة</a>
               </li>
               <li>
-                <img src="assets/stickynote.png" />
+                <img src="./assets/stickynote.png" />
                 <a href="./draft.html">المسودة</a>
               </li>
               <li>
-                <img src="assets/more-circle.png" />
+                <img src="./assets/more-circle.png" />
                 <a href="./publicity.html">التعميمات</a>
               </li>
               <li>
-                <img src="assets/document.png" />
+                <img src="./assets/document.png" />
                 <a href="./forwarded-tasks.html">متابعة المهام المحولة</a>
               </li>
               <li>
-                <img src="assets/search.png" />
-                <a href="./search-admin-files.html"> بحث</a>
+                <img src="./assets/search.png" />
+                <a href="./search-transactions.html"> بحث</a>
               </li>
               <li>
-                <img src="assets/note.png" />
+                <img src="./assets/note.png" />
                 <a href="./records.html">التقارير</a>
               </li>
             </ul>
             <div class="signout">
-              <img src="assets/Logout.png" />
-              <a href="">تسجيل الخروج</a>
+              <img src="./assets/Logout.png" />
+              <a href="./login.html">تسجيل الخروج</a>
             </div>
           </div>
         </aside>
@@ -231,22 +239,22 @@
           <div class="nav">
             <div class="time-wrapper">
               <div class="time">
-                <img src="assets/clock.png" alt="clock" />
+                <img src="./assets/clock.png" alt="clock" />
                 <span>12:46:43 PM</span>
               </div>
               <div class="date">
-                <img src="assets/calendar.png" alt="calendar" />
+                <img src="./assets/calendar.png" alt="calendar" />
                 <span>01-01-2025</span>
               </div>
             </div>
             <div class="help">
-              <a href=""><img src="assets/question.png" alt="question" /></a>
+              <a href=""><img src="./assets/question.png" alt="question" /></a>
               <a href=""
-                ><img src="assets/support_svgrepo.com.png" alt="support"
+                ><img src="./assets/support_svgrepo.com.png" alt="support"
               /></a>
               <div>
                 <img
-                  src="assets/notification.png"
+                  src="./assets/notification.png"
                   alt="support"
                   class="notify"
                 />
@@ -265,13 +273,13 @@
           <div class="actions">
             <div class="docs">
               <div class="img-action">
-                <img src="assets/print.png" alt="print" class="print" />
+                <img src="./assets/print.png" alt="print" class="print" />
               </div>
               <div class="img-action">
-                <img src="assets/export.png" alt="export" class="export" />
+                <img src="./assets/export.png" alt="export" class="export" />
               </div>
               <div class="img-action">
-                <img src="assets/filter.png" alt="filter" class="filter" />
+                <img src="./assets/filter.png" alt="filter" class="filter" />
               </div>
             </div>
             <form class="search">
@@ -300,22 +308,22 @@
                   <p>إجراءات</p>
                 </div>
                 <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
+                  <div><img src="./assets/read.png" alt="read" /></div>
+                  <div><img src="./assets/back.png" alt="read" /></div>
+                  <div><img src="./assets/book.png" alt="read" /></div>
+                  <div><img src="./assets/done.png" alt="read" /></div>
                 </div>
                 <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
+                  <div><img src="./assets/read.png" alt="read" /></div>
+                  <div><img src="./assets/back.png" alt="read" /></div>
+                  <div><img src="./assets/book.png" alt="read" /></div>
+                  <div><img src="./assets/done.png" alt="read" /></div>
                 </div>
                 <div class="action-items">
-                  <div><img src="assets/read.png" alt="read" /></div>
-                  <div><img src="assets/back.png" alt="read" /></div>
-                  <div><img src="assets/book.png" alt="read" /></div>
-                  <div><img src="assets/done.png" alt="read" /></div>
+                  <div><img src="./assets/read.png" alt="read" /></div>
+                  <div><img src="./assets/back.png" alt="read" /></div>
+                  <div><img src="./assets/book.png" alt="read" /></div>
+                  <div><img src="./assets/done.png" alt="read" /></div>
                 </div>
               </div>
               <div class="column">
@@ -323,13 +331,13 @@
                   <p>الموضوع</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>الحضور والانصراف</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>الحضور والانصراف</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>الحضور والانصراف</p>
                 </div>
               </div>
               <div class="column">
@@ -337,13 +345,13 @@
                   <p>اسم الجهة</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>ديوان الخدمة المدنية</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>ديوان الخدمة المدنية</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>ديوان الخدمة المدنية</p>
                 </div>
               </div>
               <div class="column">
@@ -351,13 +359,13 @@
                   <p>تاريخ المعاملة</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>05/12/2024</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>05/12/2024</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p>05/12/2024</p>
                 </div>
               </div>
               <div class="column">
@@ -365,13 +373,13 @@
                   <p>رقم المعاملة</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p class="transaction-head">20251205</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p class="transaction-head">20251205</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p class="transaction-head">20251205</p>
                 </div>
               </div>
               <div class="column">
@@ -379,13 +387,13 @@
                   <p>رقم المرجع</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p></p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p></p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p></p>
                 </div>
               </div>
               <div class="column">
@@ -393,13 +401,13 @@
                   <p>الاسم / الرقم المدني</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p style="font-size: 14px">3435345345- احمد احمد احمد</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p style="font-size: 14px">3435345345- احمد احمد احمد</p>
                 </div>
                 <div class="item">
-                  <p>State</p>
+                  <p style="font-size: 14px">3435345345- احمد احمد احمد</p>
                 </div>
               </div>
               <div class="column">
@@ -407,13 +415,13 @@
                   <p>الملاحظات</p>
                 </div>
                 <div class="item">
-                  <img src="assets/View.png" />
+                  <img src="./assets/View.png" />
                 </div>
                 <div class="item">
-                  <img src="assets/View.png" />
+                  <img src="./assets/View.png" />
                 </div>
                 <div class="item">
-                  <img src="assets/View.png" />
+                  <img src="./assets/View.png" />
                 </div>
               </div>
             </div>
@@ -428,7 +436,7 @@
                 <label for="lines">الاسطر بالصفحه</label>
               </div>
               <div class="pages">
-                <div><img src="assets/arrow-right.png" alt="left" /></div>
+                <div><img src="./assets/arrow-right.png" alt="left" /></div>
                 <div class="page-numbers">
                   <a>4</a>
                   <a>3</a>
@@ -436,7 +444,7 @@
                   <a>2</a>
                   <a class="active">1</a>
                 </div>
-                <div><img src="assets/arrow-left.png" alt="left" /></div>
+                <div><img src="./assets/arrow-left.png" alt="left" /></div>
               </div>
               <div class="total">
                 <p>المجموع 57</p>
